--- a/templates/post/fileinfo.html
+++ b/templates/post/fileinfo.html
@@ -7,7 +7,7 @@
 	{% if file.file == 'deleted' %}
 		<img class="post-image deleted" src="{{ config.image_deleted }}" alt="" />
 	{% else %}
-		<p class="fileinfo">File: <a href="{{ config.uri_img }}{{ file.file }}">{{ file.file }}</a> <span class="unimportant">
+		<p class="fileinfo">File: <a href="{{ config.uri_img }}{{ file.file }}">{{ file.file }}</a> <a class="fa fa-download" href="{{ config.uri_img }}{{ file.file }}" download="{{ file.file }}"> Download original</a>  <span class="unimportant">
 		(
 			{% if file.thumb == 'spoiler' %}
 				{% trans %}Spoiler Image{% endtrans %}, 
